2008-01-16  Wade Berrier  <wberrier@novell.com>

	* monodoc.desktop.in: no extension on icon, remove
	'Application' from Categories.  (standards enforced by rpmlint)

2007-12-12  Jonathan Pryor  <jonpryor@vt.edu>

	* GtkHtmlHtmlRender.cs: Hack: "fix" the URLs retrieved from GTKHTML --
	  s/&lt;/</g, s/&gt;/>/g -- so that the engine can properly lookup generic
	  types.

2007-11-23  Mario Sopena <mario.sopena@gmail.com>

	* browser.cs: 
	  - fix #324305. Now, when search results panel lost focus,
	    unselects the selected search result
	  - fix #322097. Solution based on the patch provided 
	    by gabriel.burt@gmail.com
	  - Use CSS when gecko is used as renderer
	

2007-11-15  Wade Berrier  <wberrier@novell.com>

	* monodoc.in: force --no-gecko because xulrunner crashes on some distros
	(See https://bugzilla.novell.com/show_bug.cgi?id=341815 )

2007-11-09  Wade Berrier  <wberrier@novell.com>

	* AssemblyInfo.cs.in: use TOOLS_VERSION because it is
	in an mcs friendly format (for svn revisions)

2007-11-08  Mike Kestner  <mkestner@novell.com>

	* PrintManager.cs: extracted existing duplicated print
	code from the two renderers and put it here, along with a
	new Gtk.Print based implementation for gtkhtml-sharp 3.14
	and beyond.
	* GeckoHtmlRender.cs: refactor to use PrintManager.
	* GtkHtmlHtmlRender.cs : ditto.
	* Makefile.am : add some gtkhtml library install magic.

2007-10-01  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (browser_sources): Move AssemblyInfo.cs ...
	(browser_built_sources): ... here.

2007-07-06  Wade Berrier  <wberrier@novell.com>

	* monodoc.in: search gre.d to aid in finding libgtkembedmoz
	(Stolen from monodevelop wrapper)

2007-03-17  Kevin Reay  <kevintreay@gmail.com>

	* browser.cs: Fixed bug where ctrl-clicking link a would cause crash
	due to AddTab() affecting the current CurrentTab.html.Url variable.
	* browser.glade: Make browser more gnome HIG compliant; added 
	common HIG-related features.