@@ -98,5 +98,4 @@ export MOZILLA_FIVE_HOME
 export MOZILLA_HOME 
 export LD_LIBRARY_PATH
 
-# force '--no-gecko' because xulrunner is crashing on some browsers (bug #341815)
-exec @RUNTIME@ $monodocdir/browser.exe --no-gecko $OPTIONS "$@" $REST
+exec @RUNTIME@ $monodocdir/browser.exe $OPTIONS "$@" $REST
